// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index empty 1`] = `
Object {
  "author": "Sebastian Landwehr <info@sebastianlandwehr.com>",
  "engines": Object {
    "node": ">=18",
  },
  "files": Array [
    "dist",
  ],
  "funding": "https://github.com/sponsors/dword-design",
  "license": "MIT",
  "publishConfig": Object {
    "access": "public",
  },
  "scripts": Object {
    "checkUnknownFiles": "base checkUnknownFiles",
    "commit": "base commit",
    "depcheck": "base depcheck",
    "dev": "base dev",
    "lint": "base lint",
    "prepare": "base prepare",
    "prepublishOnly": "base prepublishOnly",
    "test": "base test",
  },
  "type": "module",
  "version": "1.0.0",
}
`;

exports[`index existing package 1`] = `
Object {
  "author": "Sebastian Landwehr <info@sebastianlandwehr.com>",
  "bin": Object {
    "foo": "./dist/cli.js",
  },
  "dependencies": Object {
    "foo": "^1.0.0",
  },
  "description": "foo bar",
  "devDependencies": Object {
    "base-config-bar": "^1.0.0",
  },
  "engines": Object {
    "node": ">=18",
  },
  "files": Array [
    "dist",
  ],
  "funding": "https://github.com/sponsors/dword-design",
  "keywords": Array [
    "foo",
    "bar",
  ],
  "license": "MIT",
  "name": "foo",
  "peerDependencies": Object {
    "nuxt": "^1.0.0",
  },
  "publishConfig": Object {
    "access": "public",
  },
  "scripts": Object {
    "checkUnknownFiles": "base checkUnknownFiles",
    "commit": "base commit",
    "depcheck": "base depcheck",
    "dev": "base dev",
    "lint": "base lint",
    "prepare": "base prepare",
    "prepublishOnly": "base prepublishOnly",
    "test": "base test",
  },
  "type": "module",
  "types": "types.d.ts",
  "version": "1.1.0",
}
`;

exports[`index git repo 1`] = `
Object {
  "author": "Sebastian Landwehr <info@sebastianlandwehr.com>",
  "engines": Object {
    "node": ">=18",
  },
  "files": Array [
    "dist",
  ],
  "funding": "https://github.com/sponsors/dword-design",
  "license": "MIT",
  "publishConfig": Object {
    "access": "public",
  },
  "repository": "dword-design/foo",
  "scripts": Object {
    "checkUnknownFiles": "base checkUnknownFiles",
    "commit": "base commit",
    "depcheck": "base depcheck",
    "dev": "base dev",
    "lint": "base lint",
    "prepare": "base prepare",
    "prepublishOnly": "base prepublishOnly",
    "test": "base test",
  },
  "type": "module",
  "version": "1.0.0",
}
`;
